<!-- popup_layout.xml -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:background="#333339">


    <FrameLayout
        android:id="@+id/scroll_view_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">


                <TextView
                    android:id="@+id/choose_route_auditory"
                    android:layout_width="330dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/filled_rounded_all"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/audit_rio"/>

                <TextView
                    android:id="@+id/choose_route_library"
                    android:layout_width="330dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/filled_rounded_all"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/biblioteca"/>

                <TextView
                    android:id="@+id/choose_route_block_05"
                    android:layout_width="330dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/filled_rounded_all"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/bloco_05"/>

                <TextView
                    android:id="@+id/choose_route_block_08"
                    android:layout_width="330dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/filled_rounded_all"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/bloco_08"/>

                <TextView
                    android:id="@+id/choose_route_block_09_bathrooms"
                    android:layout_width="330dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/filled_rounded_all"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/banheiros_do_bloco_09"/>

                <TextView
                    android:id="@+id/choose_route_coordination"
                    android:layout_width="330dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/filled_rounded_all"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/coordena_o"/>

                <TextView
                    android:id="@+id/choose_route_cra"
                    android:layout_width="330dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/filled_rounded_all"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/cra"/>

                <TextView
                    android:id="@+id/choose_route_warehouse"
                    android:layout_width="330dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/filled_rounded_all"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/dep_sito"/>

                <TextView
                    android:id="@+id/choose_route_ifes_entrance"
                    android:layout_width="330dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/filled_rounded_all"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/entrada_do_ifes"/>

                <TextView
                    android:id="@+id/choose_route_parking"
                    android:layout_width="330dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/filled_rounded_all"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/estacionamento"/>

                <TextView
                    android:id="@+id/choose_route_high_school_garden"
                    android:layout_width="330dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/filled_rounded_all"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/jardim_do_ensino_m_dio"/>

                <TextView
                    android:id="@+id/choose_route_laboratories"
                    android:layout_width="330dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/filled_rounded_all"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/laborat_rios"/>

                <TextView
                    android:id="@+id/choose_route_technology_classrooms"
                    android:layout_width="330dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/filled_rounded_all"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/laborat_rios_de_tecnologia"/>

                <TextView
                    android:id="@+id/choose_route_leds"
                    android:layout_width="330dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/filled_rounded_all"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/leds"/>

                <TextView
                    android:id="@+id/choose_route_main_ramp"
                    android:layout_width="330dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/filled_rounded_all"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/rampa_principal"/>

                <TextView
                    android:id="@+id/choose_route_refectory"
                    android:layout_width="330dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/filled_rounded_all"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/refeit_rio"/>

                <TextView
                    android:id="@+id/choose_route_college_classrooms"
                    android:layout_width="330dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/filled_rounded_all"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/salas_do_ensino_superior"/>

                <TextView
                    android:id="@+id/choose_route_staff_rooms"
                    android:layout_width="330dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/filled_rounded_all"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/salas_dos_professores"/>


            </LinearLayout>

        </ScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:background="@drawable/scroll_view_top_fade_effect"
            android:layout_gravity="top"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:background="@drawable/scroll_view_bottom_fade_effect"
            android:layout_gravity="bottom"/>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>



